# web-tr

./: Cargo.toml
migrations/: 001_users_table.sql  002_services_table.sql  003_appointments_table.sql
src/: db_conn.rs  main.rs
