[package]
name = "web-tr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = {version = "0.7.3", features = ["postgres", "macros", "runtime-tokio", "tls-native-tls" ]}
tokio = {version = "1.36.0", features = ["full"]}
